Courses front-end implementation

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,8 @@
     <title>Hemma - همّة</title>
   </head>
   <body>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
