--- a/public/index.html
+++ b/public/index.html
@@ -38,11 +38,7 @@
     -->
     <title>Hemma - همّة</title>
   </head>
-  <body
-    style="background-image: url('/assets/images/header-bg.png');
-    background-repeat: no-repeat;
-    background-size: contain;"
-  >
+  <body>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 
     <div id="root"></div>
