Started with the home page UI, added FacebookLogin and GoogleLogin components

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,9 @@
     -->
     <title>Hemma - همّة</title>
   </head>
-  <body>
+  <body
+    style="background-image: url(./assets/images/home-bg.svg); background-size:50%; background-repeat: no-repeat"
+  >
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 
     <div id="root"></div>
