Chat in live-stream

--- a/public/leave-meeting.html
+++ b/public/leave-meeting.html
@@ -11,14 +11,28 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Cairo&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body class="h-100">
     <div class="container h-100">
       <div class="row h-100">
         <div
-          class="col-12 text-center h-100 d-flex align-items-center justify-content-center"
+          class="col-12 text-center h-100 d-flex align-items-center justify-content-center flex-column"
         >
-          <h1>شكرًا لحضورك</h1>
+          <img
+            src="./assets/images/smile.png"
+            style="object-fit:contain"
+            height="150"
+          />
+          <h2
+            style="color:#4b3a85;font-family: 'Cairo', sans-serif;"
+            class="mt-4 mb-0"
+          >
+            شكرًا لحضورك
+          </h2>
         </div>
       </div>
     </div>
