--- a/public/webinar.html
+++ b/public/webinar.html
@@ -115,7 +115,7 @@
             });
 
             ZoomMtg.init({
-              leaveUrl: "http://localhost:3000/leave-meeting.html",
+              leaveUrl: "https://staging.hemma.sa/leave-meeting.html",
               isSupportAV: true,
               success: function() {
                 ZoomMtg.join({
