Initiating general channel on chat page load

--- a/public/webinar.html
+++ b/public/webinar.html
@@ -117,6 +117,7 @@
             ZoomMtg.init({
               leaveUrl: "https://staging.hemma.sa/leave-meeting.html",
               isSupportAV: true,
+              isSupportChat: false,
               success: function() {
                 ZoomMtg.join({
                   meetingNumber: meetConfig.meetingNumber,
