Changed to urls to production

--- a/public/webinar.html
+++ b/public/webinar.html
@@ -47,7 +47,7 @@
           meetingNumber: id,
           userName: "username",
           passWord: "",
-          leaveUrl: "https://staging.hemma.sa/leave-meeting.html",
+          leaveUrl: "https://hemma.sa/leave-meeting.html",
           role: 0
         };
 
@@ -62,7 +62,7 @@
         });
 
         ZoomMtg.init({
-          leaveUrl: "https://staging.hemma.sa/leave-meeting.html",
+          leaveUrl: "https://hemma.sa/leave-meeting.html",
           isSupportAV: true,
           success: function() {
             ZoomMtg.join({
