Second release production edits

--- a/public/webinar.html
+++ b/public/webinar.html
@@ -76,12 +76,12 @@
                 // console.log("join meeting success");
               },
               error: function(res) {
-                // console.log(res);
+                console.log(res);
               }
             });
           },
           error: function(res) {
-            // console.log(res);
+            console.log(res);
           }
         });
       })();
