--- a/public/webinar.html
+++ b/public/webinar.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
       href="https://dmogdx0jrul3u.cloudfront.net/1.4.2/css/react-select.css"
     />
+    <link rel="stylesheet" href="./assets/css/custom.css" />
   </head>
   <body>
     <script src="https://dmogdx0jrul3u.cloudfront.net/1.4.2/lib/vendor/react.min.js"></script>
