--- a/public/index.html
+++ b/public/index.html
@@ -25,5 +25,7 @@
   <body>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <div id="root"></div>
+
+    <script src="https://dev.vdocipher.com/playerAssets/1.6.10/vdo.js"></script>
   </body>
 </html>
