--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,33 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
+
+    <meta name="twitter:site" content="@HemmaEdu" />
+    <meta
+      name="description"
+      content="منصّة همّة التابعة لسلسة بالبيد التعليمية تقدّم للطلاب محاضرات مسجلة. لو ماقدرت تحضر البث لا تشيل هم كل المحاضرات تتسجل وتنزل بعد البث. خلك مستعد واختبر نفسك. مناقشات. ارسل استفسارك وشاركهم ...
+نقدم لكم دورات كفايات معلمين ومعلمات, دورات قدرات الجامعيين, دورات القدرات والتحصيلي, إعداد معلمات التربية البدنية"
+    />
+    <meta name="twitter:domain" content="www.hemma.sa" />
+    <meta
+      name="twitter:description"
+      content="منصّة همّة التابعة لسلسة بالبيد التعليمية تقدّم للطلاب محاضرات مسجلة. لو ماقدرت تحضر البث لا تشيل هم كل المحاضرات تتسجل وتنزل بعد البث. خلك مستعد واختبر نفسك. مناقشات. ارسل استفسارك وشاركهم ...
+نقدم لكم دورات كفايات معلمين ومعلمات, دورات قدرات الجامعيين, دورات القدرات والتحصيلي, إعداد معلمات التربية البدنية"
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.hemma.sa/src='/assets/images/logo.png'"
+    />
+    <meta
+      itemprop="description"
+      content="منصّة همّة التابعة لسلسة بالبيد التعليمية تقدّم للطلاب محاضرات مسجلة. لو ماقدرت تحضر البث لا تشيل هم كل المحاضرات تتسجل وتنزل بعد البث. خلك مستعد واختبر نفسك. مناقشات. ارسل استفسارك وشاركهم ...
+نقدم لكم دورات كفايات معلمين ومعلمات, دورات قدرات الجامعيين, دورات القدرات والتحصيلي, إعداد معلمات التربية البدنية"
+    />
+    <meta
+      itemprop="image"
+      content="https://www.hemma.sa/src='/assets/images/logo.png'"
+    />
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
       rel="stylesheet"
@@ -19,8 +46,6 @@
       integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous"
     />
-
-    <title>Hemma - همّة</title>
   </head>
   <body>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
