--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
     />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/circle.css" />
     <link
       rel="stylesheet"
       href="%PUBLIC_URL%/assets/css/bootstrap-rtl.min.css"
@@ -45,7 +46,8 @@
   <body>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <div id="root"></div>
-
     <script src="https://dev.vdocipher.com/playerAssets/1.6.10/vdo.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"/>
+    <script src="%PUBLIC_URL%/assets/js/scripts.js"></script>
   </body>
 </html>
