--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <div id="root"></div>
     <script src="https://dev.vdocipher.com/playerAssets/1.6.10/vdo.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"/>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <script src="%PUBLIC_URL%/assets/js/scripts.js"></script>
   </body>
 </html>
