--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,15 @@
       integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+   
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/animate.min.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/hamburgers.min.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/glide.core.min.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/glide.theme.min.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/all.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/main.css">
   </head>
 
   <body>
@@ -52,9 +61,20 @@
       <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KNFD3ZQ"height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+
     <div id="root"></div>
     <script src="https://dev.vdocipher.com/playerAssets/1.6.10/vdo.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <script src="%PUBLIC_URL%/assets/js/scripts.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="%PUBLIC_URL%/assets/js/glide.min.js"></script> -->
+    <script src="%PUBLIC_URL%/assets/js/all.min.js"></script>
+    <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
+    <script src="%PUBLIC_URL%/assets/js/main.js"></script>
+    <script>
+
+
+    </script>
+    
   </body>
 </html>
