--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 
     <div id="root"></div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://dev.vdocipher.com/playerAssets/1.6.10/vdo.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <script src="%PUBLIC_URL%/assets/js/scripts.js"></script>
