--- a/public/index.html
+++ b/public/index.html
@@ -39,12 +39,12 @@
       rel="stylesheet"
       href="%PUBLIC_URL%/assets/css/bootstrap-rtl.min.css"
     />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
       integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous"
-    />
+    /> -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
    
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/animate.min.css">
@@ -63,6 +63,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 
     <div id="root"></div>
+    <!-- <script src="%PUBLIC_URL%/assets/js/main.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://dev.vdocipher.com/playerAssets/1.6.10/vdo.js"></script>
@@ -72,11 +73,6 @@
     <!-- <script src="%PUBLIC_URL%/assets/js/glide.min.js"></script> -->
     <script src="%PUBLIC_URL%/assets/js/all.min.js"></script>
     <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
-    <script src="%PUBLIC_URL%/assets/js/main.js"></script>
-    <script>
-
-
-    </script>
     
   </body>
 </html>
