make enhance for UI

--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,8 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/all.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/main.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/converted.css">
+
   </head>
 
   <body>
