apply UI new design

--- a/public/index.html
+++ b/public/index.html
@@ -35,10 +35,12 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/circle.css" />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="%PUBLIC_URL%/assets/css/bootstrap-rtl.min.css"
-    />
+    /> -->
+
+    <link rel="stylesheet" href="https://cdn.rtlcss.com/bootstrap/v4.5.3/css/bootstrap.min.css">
     <!-- <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
@@ -53,8 +55,9 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/glide.theme.min.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/all.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/main.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/converted.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/main.css">
+  
 
   </head>
 
