new cdn for jquery

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
     <!-- Google Tag Manager (noscript) -->
       <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KNFD3ZQ"height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <div id="root"></div>
     <!-- <script src="%PUBLIC_URL%/assets/js/main.js"></script> -->
