--- a/public/index.html
+++ b/public/index.html
@@ -18,10 +18,10 @@
 
   <meta name="twitter:site" content="@HemmaEdu" />
   <meta name="twitter:domain" content="www.hemma.sa" />
-  <meta name="twitter:description" content="منصّة همّة التابعة لسلسة بالبيد التعليمية تقدّم للطلاب محاضرات مسجلة. لو ماقدرت تحضر البث لا تشيل هم كل المحاضرات تتسجل وتنزل بعد البث. خلك مستعد واختبر نفسك. مناقشات. ارسل استفسارك وشاركهم ...
+  <meta name="twitter:description" content="منصّة همّة التابعة لسلسلة بالبيد التعليمية تقدّم للطلاب محاضرات مسجلة. لو ماقدرت تحضر البث لا تشيل هم كل المحاضرات تتسجل وتنزل بعد البث. خلك مستعد واختبر نفسك. مناقشات. ارسل استفسارك وشاركهم ...
 نقدم لكم دورات كفايات معلمين ومعلمات, دورات قدرات الجامعيين, دورات القدرات والتحصيلي, إعداد معلمات التربية البدنية" />
   <meta name="twitter:image" content="https://www.hemma.sa/src='/assets/images/logo.png'" />
-  <meta itemprop="description" content="منصّة همّة التابعة لسلسة بالبيد التعليمية تقدّم للطلاب محاضرات مسجلة. لو ماقدرت تحضر البث لا تشيل هم كل المحاضرات تتسجل وتنزل بعد البث. خلك مستعد واختبر نفسك. مناقشات. ارسل استفسارك وشاركهم ...
+  <meta itemprop="description" content="منصّة همّة التابعة لسلسلة بالبيد التعليمية تقدّم للطلاب محاضرات مسجلة. لو ماقدرت تحضر البث لا تشيل هم كل المحاضرات تتسجل وتنزل بعد البث. خلك مستعد واختبر نفسك. مناقشات. ارسل استفسارك وشاركهم ...
 نقدم لكم دورات كفايات معلمين ومعلمات, دورات قدرات الجامعيين, دورات القدرات والتحصيلي, إعداد معلمات التربية البدنية" />
   <meta itemprop="image" content="https://www.hemma.sa/src='/assets/images/logo.png'" />
 
