--- a/public/index.html
+++ b/public/index.html
@@ -1,77 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-6GELZ6KL41"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-6GELZ6KL41");
+    </script>
+    <!-- End Google Tag Manager -->
+    <meta charset="utf-8" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/assets/images/favicon.png" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="theme-color" content="#000000" />
 
-<head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-6GELZ6KL41"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'G-6GELZ6KL41');
-  </script>
-  <!-- End Google Tag Manager -->
-  <meta charset="utf-8" />
-  <link rel="shortcut icon" href="%PUBLIC_URL%/assets/images/favicon.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="theme-color" content="#000000" />
+    <meta name="twitter:site" content="@HemmaEdu" />
+    <meta name="twitter:domain" content="www.hemma.sa" />
+    <meta
+      name="twitter:description"
+      content="منصّة همّة التابعة لسلسلة بالبيد التعليمية تقدّم للطلاب محاضرات مسجلة. لو ماقدرت تحضر البث لا تشيل هم كل المحاضرات تتسجل وتنزل بعد البث. خلك مستعد واختبر نفسك. مناقشات. ارسل استفسارك وشاركهم ...
+نقدم لكم دورات كفايات معلمين ومعلمات, دورات قدرات الجامعيين, دورات القدرات والتحصيلي, إعداد معلمات التربية البدنية"
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.hemma.sa/src='/assets/images/logo.png'"
+    />
+    <meta
+      itemprop="description"
+      content="منصّة همّة التابعة لسلسلة بالبيد التعليمية تقدّم للطلاب محاضرات مسجلة. لو ماقدرت تحضر البث لا تشيل هم كل المحاضرات تتسجل وتنزل بعد البث. خلك مستعد واختبر نفسك. مناقشات. ارسل استفسارك وشاركهم ...
+نقدم لكم دورات كفايات معلمين ومعلمات, دورات قدرات الجامعيين, دورات القدرات والتحصيلي, إعداد معلمات التربية البدنية"
+    />
+    <meta
+      itemprop="image"
+      content="https://www.hemma.sa/src='/assets/images/logo.png'"
+    />
 
-  <meta name="twitter:site" content="@HemmaEdu" />
-  <meta name="twitter:domain" content="www.hemma.sa" />
-  <meta name="twitter:description" content="منصّة همّة التابعة لسلسلة بالبيد التعليمية تقدّم للطلاب محاضرات مسجلة. لو ماقدرت تحضر البث لا تشيل هم كل المحاضرات تتسجل وتنزل بعد البث. خلك مستعد واختبر نفسك. مناقشات. ارسل استفسارك وشاركهم ...
-نقدم لكم دورات كفايات معلمين ومعلمات, دورات قدرات الجامعيين, دورات القدرات والتحصيلي, إعداد معلمات التربية البدنية" />
-  <meta name="twitter:image" content="https://www.hemma.sa/src='/assets/images/logo.png'" />
-  <meta itemprop="description" content="منصّة همّة التابعة لسلسلة بالبيد التعليمية تقدّم للطلاب محاضرات مسجلة. لو ماقدرت تحضر البث لا تشيل هم كل المحاضرات تتسجل وتنزل بعد البث. خلك مستعد واختبر نفسك. مناقشات. ارسل استفسارك وشاركهم ...
-نقدم لكم دورات كفايات معلمين ومعلمات, دورات قدرات الجامعيين, دورات القدرات والتحصيلي, إعداد معلمات التربية البدنية" />
-  <meta itemprop="image" content="https://www.hemma.sa/src='/assets/images/logo.png'" />
-
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/circle.css" />
-  <!-- <link
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/circle.css" />
+    <!-- <link
       rel="stylesheet"
       href="%PUBLIC_URL%/assets/css/bootstrap-rtl.min.css"
     /> -->
 
-  <link rel="stylesheet" href="https://cdn.rtlcss.com/bootstrap/v4.5.3/css/bootstrap.min.css">
-  <!-- <link
+    <link
+      rel="stylesheet"
+      href="https://cdn.rtlcss.com/bootstrap/v4.5.3/css/bootstrap.min.css"
+    />
+    <!-- <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
       integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous"
     /> -->
-  <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
 
-  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/animate.min.css">
-  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/hamburgers.min.css">
-  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/glide.core.min.css">
-  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/glide.theme.min.css">
-  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/all.min.css">
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/converted.css">
-  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/main.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/animate.min.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/hamburgers.min.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/glide.core.min.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/glide.theme.min.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/all.min.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/converted.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/main.css" />
+  </head>
 
+  <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-KNFD3ZQ"
+        height="0"
+        width="0"
+        style="display:none;visibility:hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
-</head>
-
-<body>
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KNFD3ZQ" height="0" width="0"
-      style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-  <div id="root"></div>
-  <!-- <script src="%PUBLIC_URL%/assets/js/main.js"></script> -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-  <script src="https://dev.vdocipher.com/playerAssets/1.6.10/vdo.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-  <script src="%PUBLIC_URL%/assets/js/scripts.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- <script src="%PUBLIC_URL%/assets/js/glide.min.js"></script> -->
-  <script src="%PUBLIC_URL%/assets/js/all.min.js"></script>
-  <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
-
-</body>
-
+    <div id="root"></div>
+    <!-- <script src="%PUBLIC_URL%/assets/js/main.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://dev.vdocipher.com/playerAssets/1.6.10/vdo.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/scripts.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="%PUBLIC_URL%/assets/js/glide.min.js"></script> -->
+    <script src="%PUBLIC_URL%/assets/js/all.min.js"></script>
+    <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
+  </body>
 </html>
