--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,8 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/converted.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/main.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/3.3.4/bluebird.min.js"></script>
+    <script src="https://secure.gosell.io/js/sdk/tap.min.js"></script>
   </head>
 
   <body>
