--- a/public/index.html
+++ b/public/index.html
@@ -98,5 +98,16 @@
     <!-- <script src="%PUBLIC_URL%/assets/js/glide.min.js"></script> -->
     <script src="%PUBLIC_URL%/assets/js/all.min.js"></script>
     <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
+    <!-- Start of ChatBot (www.chatbot.com) code -->
+<!-- <script type="text/javascript">
+  window.__be = window.__be || {};
+  window.__be.id = "623a25a81149050007b19272";
+  (function() {
+      var be = document.createElement('script'); be.type = 'text/javascript'; be.async = true;
+      be.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.chatbot.com/widget/plugin.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(be, s);
+  })();
+</script> -->
+<!-- End of ChatBot code -->
   </body>
 </html>
